# processing_pipeline

./: .gitignore  Makefile  pyproject.toml  setup.py
deployment/: Dockerfile
deployment/k8s/: deployment.yaml  service.yaml
src/processing_pipeline/: annotation_builder.py  annotation_db_manager.py  api.py  audit_events.py  config_encryption.py  coordinate_converter.py  db_config.yaml  generate_report.py  pipeline.py
src/processing_pipeline/gen-py/AdminAPIStructs/: ttypes.py
src/processing_pipeline/gen-py/Annotations/: ttypes.py
src/processing_pipeline/gen-py/FileStores/: constants.py  ttypes.py
tests/: conftest.py  test_api.py
